force-app/main/default/objects/Retailer__c/Retailer__c.object-meta.xml
<CustomObject>
    <label>Retailer</label>
    <nameField>
        <label>Retailer Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Retailers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>