force-app/main/default/objects/Retailer__c/fields/All_Hours__c.field-meta.xml
<CustomField>
    <fullName>All_Hours__c</fullName>
    <defaultValue>false</defaultValue>
    <label>All Hours</label>
    <type>Checkbox</type>
</CustomField>