force-app/main/default/objects/Retailer__c/fields/Basketball_Court__c.field-meta.xml
<CustomField>
    <fullName>Basketball_Court__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Basketball Court</label>
    <type>Checkbox</type>
</CustomField>