force-app/main/default/objects/Retailer__c/fields/Compound_Pharmacy__c.field-meta.xml
<CustomField>
    <fullName>Compound_Pharmacy__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Compound Pharmacy</label>
    <type>Checkbox</type>
</CustomField>