force-app/main/default/objects/Retailer__c/fields/Computer_Stations__c.field-meta.xml
<CustomField>
    <fullName>Computer_Stations__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Computer Stations</label>
    <type>Checkbox</type>
</CustomField>