force-app/main/default/objects/Retailer__c/fields/DMA__c.field-meta.xml
<CustomField>
    <fullName>DMA__c</fullName>
    <label>DMA</label>
    <length>100</length>
    <type>Text</type>
</CustomField>