force-app/main/default/objects/Retailer__c/fields/Drive_Through__c.field-meta.xml
<CustomField>
    <fullName>Drive_Through__c</fullName>
    <label>Drive-Through</label>
    <length>50</length>
    <type>Text</type>
</CustomField>