force-app/main/default/objects/Retailer__c/fields/Fitness_Center__c.field-meta.xml
<CustomField>
    <fullName>Fitness_Center__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Fitness Center</label>
    <type>Checkbox</type>
</CustomField>