force-app/main/default/objects/Retailer__c/fields/Game_Room__c.field-meta.xml
<CustomField>
    <fullName>Game_Room__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Game Room</label>
    <type>Checkbox</type>
</CustomField>