force-app/main/default/objects/Retailer__c/fields/Has_Gas_Station__c.field-meta.xml
<CustomField>
    <fullName>Has_Gas_Station__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Has Gas Station</label>
    <type>Checkbox</type>
</CustomField>