force-app/main/default/objects/Retailer__c/fields/Has_Photo_Center__c.field-meta.xml
<CustomField>
    <fullName>Has_Photo_Center__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Has Photo Center</label>
    <type>Checkbox</type>
</CustomField>