force-app/main/default/objects/Retailer__c/fields/Has_Tire_And_Lube__c.field-meta.xml
<CustomField>
    <fullName>Has_Tire_And_Lube__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Has Tire And Lube</label>
    <type>Checkbox</type>
</CustomField>