force-app/main/default/objects/Retailer__c/fields/Has_Vision_Center__c.field-meta.xml
<CustomField>
    <fullName>Has_Vision_Center__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Has Vision Center</label>
    <type>Checkbox</type>
</CustomField>