force-app/main/default/objects/Retailer__c/fields/Little_Clinic__c.field-meta.xml
<CustomField>
    <fullName>Little_Clinic__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Little Clinic</label>
    <type>Checkbox</type>
</CustomField>