force-app/main/default/objects/Retailer__c/fields/masterretailer__c.field-meta.xml
<CustomField>
    <fullName>masterretailer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Retailer</label>
    <referenceTo>Retailer__c</referenceTo>
    <relationshipLabel>Retailers</relationshipLabel>
    <relationshipName>Retailers</relationshipName>
    <type>Lookup</type>
</CustomField>