force-app/main/default/objects/Retailer__c/fields/Media_Room__c.field-meta.xml
<CustomField>
    <fullName>Media_Room__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Media Room</label>
    <type>Checkbox</type>
</CustomField>