force-app/main/default/objects/Retailer__c/fields/Minute_Clinic_Hours__c.field-meta.xml
<CustomField>
    <fullName>Minute_Clinic_Hours__c</fullName>
    <label>Minute Clinic Hours</label>
    <length>255</length>
    <type>Text</type>
</CustomField>