force-app/main/default/objects/Retailer__c/fields/Pharmacy_Fax__c.field-meta.xml
<CustomField>
    <fullName>Pharmacy_Fax__c</fullName>
    <label>Pharmacy Fax</label>
    <type>Phone</type>
</CustomField>