force-app/main/default/objects/Retailer__c/fields/Pharmacy_Hours__c.field-meta.xml
<CustomField>
    <fullName>Pharmacy_Hours__c</fullName>
    <label>Pharmacy Hours</label>
    <type>Phone</type>
</CustomField>