force-app/main/default/objects/Retailer__c/fields/Pharmacy_Phone__c.field-meta.xml
<CustomField>
    <fullName>Pharmacy_Phone__c</fullName>
    <label>Pharmacy Phone</label>
    <type>Phone</type>
</CustomField>