force-app/main/default/objects/Retailer__c/fields/Plaza_Mall__c.field-meta.xml
<CustomField>
    <fullName>Plaza_Mall__c</fullName>
    <label>Plaza/Mall</label>
    <length>100</length>
    <type>Text</type>
</CustomField>