force-app/main/default/objects/Retailer__c/fields/Property_ID__c.field-meta.xml
<CustomField>
    <fullName>Property_ID__c</fullName>
    <label>Property ID</label>
    <length>10</length>
    <type>Text</type>
</CustomField>