force-app/main/default/objects/Retailer__c/fields/Property_Location__c.field-meta.xml
<CustomField>
    <fullName>Property_Location__c</fullName>
    <label>Property Location</label>
    <length>80</length>
    <type>Text</type>
</CustomField>