force-app/main/default/objects/Retailer__c/fields/Property_Management_Account__c.field-meta.xml
<CustomField>
    <fullName>Property_Management_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Property Management Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Retailers</relationshipLabel>
    <relationshipName>Retailers</relationshipName>
    <type>Lookup</type>
</CustomField>