force-app/main/default/objects/Retailer__c/fields/Property_Management_Company__c.field-meta.xml
<CustomField>
    <fullName>Property_Management_Company__c</fullName>
    <label>Property Management Company</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>EdR</fullName>
            </value>
            <value>
                <fullName>Kayne Anderson Properties</fullName>
            </value>
            <value>
                <fullName>American Campus Communities (ACC)</fullName>
            </value>
            <value>
                <fullName>Peak Campus</fullName>
            </value>
            <value>
                <fullName>Berger Properties</fullName>
            </value>
            <value>
                <fullName>Servitas</fullName>
            </value>
            <value>
                <fullName>Campus Crest Communities</fullName>
            </value>
            <value>
                <fullName>Education Realty Trust</fullName>
            </value>
            <value>
                <fullName>Asset Campus Housing</fullName>
            </value>
            <value>
                <fullName>The Scion Group</fullName>
            </value>
            <value>
                <fullName>The Collier Cos</fullName>
            </value>
            <value>
                <fullName>Capstone Collegiate Cos</fullName>
            </value>
            <value>
                <fullName>Campus Apartments</fullName>
            </value>
            <value>
                <fullName>Aspen Heights</fullName>
            </value>
            <value>
                <fullName>Campus Evolution Villages</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>