force-app/main/default/objects/Retailer__c/fields/Putting_Green__c.field-meta.xml
<CustomField>
    <fullName>Putting_Green__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Putting Green</label>
    <type>Checkbox</type>
</CustomField>