force-app/main/default/objects/Retailer__c/fields/Retailer_Type__c.field-meta.xml
<CustomField>
    <fullName>Retailer_Type__c</fullName>
    <label>Retailer Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Pharmacy</fullName>
            </value>
            <value>
                <fullName>Off-Campus Housing</fullName>
            </value>
            <value>
                <fullName>Superstore</fullName>
            </value>
            <value>
                <fullName>Grocery Store</fullName>
            </value>
            <value>
                <fullName>Chain Restaurant</fullName>
            </value>
            <value>
                <fullName>Convenience Stores</fullName>
            </value>
            <value>
                <fullName>Apparel</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>