force-app/main/default/objects/Retailer__c/fields/School_Account__c.field-meta.xml
<CustomField>
    <fullName>School_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>School Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Retailers (School Account)</relationshipLabel>
    <relationshipName>Retailers1</relationshipName>
    <type>Lookup</type>
</CustomField>