force-app/main/default/objects/Retailer__c/fields/Shuttle_Bus__c.field-meta.xml
<CustomField>
    <fullName>Shuttle_Bus__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Shuttle Bus</label>
    <type>Checkbox</type>
</CustomField>