force-app/main/default/objects/Retailer__c/fields/Store_Hours__c.field-meta.xml
<CustomField>
    <fullName>Store_Hours__c</fullName>
    <label>Store Hours</label>
    <length>255</length>
    <type>Text</type>
</CustomField>