force-app/main/default/objects/Retailer__c/fields/Store_Phone__c.field-meta.xml
<CustomField>
    <fullName>Store_Phone__c</fullName>
    <label>Store Phone</label>
    <type>Phone</type>
</CustomField>