force-app/main/default/objects/Retailer__c/fields/Tanning_Bed__c.field-meta.xml
<CustomField>
    <fullName>Tanning_Bed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Tanning Bed</label>
    <type>Checkbox</type>
</CustomField>