force-app/main/default/objects/Retailer__c/fields/Tennis_Court__c.field-meta.xml
<CustomField>
    <fullName>Tennis_Court__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Tennis Court</label>
    <type>Checkbox</type>
</CustomField>