force-app/main/default/objects/Retailer__c/fields/Volley_Ball_Court__c.field-meta.xml
<CustomField>
    <fullName>Volley_Ball_Court__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Volley Ball Court</label>
    <type>Checkbox</type>
</CustomField>