force-app/main/default/objects/Retailer__c/recordTypes/J_Crew_Group.recordType-meta.xml
<RecordType>
    <fullName>J_Crew_Group</fullName>
    <active>true</active>
    <label>J. Crew Group</label>
</RecordType>