force-app/main/default/objects/Retailer__c/recordTypes/KwikTrip.recordType-meta.xml
<RecordType>
    <fullName>KwikTrip</fullName>
    <active>true</active>
    <label>KwikTrip</label>
</RecordType>