force-app/main/default/objects/Retailer__c/recordTypes/Staples.recordType-meta.xml
<RecordType>
    <fullName>Staples</fullName>
    <active>true</active>
    <label>Staples</label>
</RecordType>