force-app/main/default/objects/Retailer__c/recordTypes/Whole_Foods.recordType-meta.xml
<RecordType>
    <fullName>Whole_Foods</fullName>
    <active>true</active>
    <label>Whole Foods</label>
</RecordType>