force-app/main/default/objects/Retailer__c/recordTypes/X7Eleven.recordType-meta.xml
<RecordType>
    <fullName>X7Eleven</fullName>
    <active>true</active>
    <label>7-Eleven</label>
</RecordType>