force-app/main/default/objects/Retailer__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Address__c</columns>
    <columns>City__c</columns>
    <columns>State__c</columns>
    <columns>Type__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Retailer_Type__c</field>
        <operation>equals</operation>
        <value>Convenience Stores</value>
    </filters>
    <label>All</label>
</ListView>