force-app/main/default/objects/Retailer__c/listViews/CVS.listView-meta.xml
<ListView>
    <fullName>CVS</fullName>
    <columns>NAME</columns>
    <columns>Store_Number__c</columns>
    <columns>Geolocation__Latitude__s</columns>
    <columns>Geolocation__Longitude__s</columns>
    <columns>Address__c</columns>
    <columns>City__c</columns>
    <columns>State__c</columns>
    <columns>Zip_Code__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>NAME</field>
        <operation>equals</operation>
        <value>CVS</value>
    </filters>
    <label>CVS</label>
</ListView>