force-app/main/default/objects/Retailer__c/listViews/Off_campus_Housing.listView-meta.xml
<ListView>
    <fullName>Off_campus_Housing</fullName>
    <columns>NAME</columns>
    <columns>Address__c</columns>
    <columns>City__c</columns>
    <columns>State__c</columns>
    <columns>Zip_Code__c</columns>
    <columns>Website__c</columns>
    <columns>Beds__c</columns>
    <columns>College__c</columns>
    <columns>Students__c</columns>
    <columns>Property_Management_Account__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Retailer__c.Housing</value>
    </filters>
    <label>Off campus Housing</label>
</ListView>